WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310057
iheart.com - Radio icon is not shown in control center
https://bugs.webkit.org/show_bug.cgi?id=310057
Summary
iheart.com - Radio icon is not shown in control center
phinehas133
Reported
2026-03-16 16:21:37 PDT
see title
Attachments
Add attachment
proposed patch, testcase, etc.
phinehas133
Comment 1
2026-03-16 16:21:38 PDT
<
rdar://problem/171198911
>
phinehas133
Comment 2
2026-03-16 16:24:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60728
EWS
Comment 3
2026-03-24 16:22:29 PDT
Committed
309874@main
(61f47004c2d9): <
https://commits.webkit.org/309874@main
> Reviewed commits have been landed. Closing PR #60728 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug