Cherry-pick 309874@main (61f47004c2d9). https://bugs.webkit.org/show_bug.cgi?id=310057

iheart.com - Radio icon is not shown in control center
    https://bugs.webkit.org/show_bug.cgi?id=310057
    rdar://171198911

    Reviewed by Jer Noble.

    iheart.com sets an "app=legacy:60" cookie that causes it to serve a player without Media Session
    API support, resulting in generic website icons in Control Center instead of station-specific
    artwork. Use the scriptToEvaluateBeforeRunningScriptFromURL quirk to override the cookie to
    "app=listen:60" before page scripts run, forcing the modern player with proper MediaSession
    metadata.

    Also remove the PLATFORM(IOS_FAMILY) guard around
    NeedsScriptToEvaluateBeforeRunningScriptFromURLQuirk so the quirk infrastructure is available on
    all platforms and add an early return for empty script URLs to prevent recursive evaluation.

    * Source/WebCore/page/Quirks.cpp:
    (WebCore::Quirks::scriptToEvaluateBeforeRunningScriptFromURL):
    (WebCore::handleIHeartQuirks):
    (WebCore::Quirks::determineRelevantQuirks):
    * Source/WebCore/page/QuirksData.h:

    Canonical link: https://commits.webkit.org/309874@main

Canonical link: https://commits.webkit.org/305877.324@webkitglib/2.52